--- a/public/css/lecture.css
+++ b/public/css/lecture.css
@@ -35,10 +35,15 @@
 .content-inner {
 	padding:10px 0;
 }
-/* 이미지영역  */
-.image-inner img {
-	width:100%;
+/* 동영상 내용 반응형 */
+.image-inner {
+	position: relative; height:0; padding-bottom: 56.25%;
 }
+.image-inner iframe {
+	position: absolute; width:100%; height:100%;
+}
+
+
 /*좋아요*/
 .like-inner {
 	padding:10px 0;
