--- a/public/css/style.css
+++ b/public/css/style.css
@@ -508,6 +508,16 @@ footer .footer-menu li a {
 	color: #777;
 	float: right;
 }
+/*답글 indicator*/
+.reply-indicator {
+	background-color:#ddd;
+    padding-left: 5px;
+    font-size: 12px;
+	height: 30px;
+	line-height: 30px;
+	border: 1px solid #ccc;
+}
+
 /*댓글창 포커스시 서서히 보이기 */
 .reply-content textarea {
 	height: 50px;
